Começando a conexão com o sql e adicionado ele ao arquivo

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Prioridades:",
   "main": "m.js",
   "scripts": {
+    "start": "node m.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "mysql2": "^3.15.3"
+    "mysql2": "^3.15.3",
+    "express-session": "^1.17.3"
   }
 }
