--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Prioridades:",
   "main": "m.js",
   "scripts": {
-    "start": "node m.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "mysql2": "^3.15.3",
-    "express-session": "^1.17.3"
+    "mysql2": "^3.15.3"
   }
 }
